# her-gnn

./: .dockerignore  .env.example  .gitignore  DEPLOY-COOLIFY.md  Makefile  README.md  docker-compose.coolify.yml  docker-compose.yml  pyproject.toml
notebooks/: 04_graph_construction.ipynb  07_mace_smoke.ipynb  08_mace_features_eda.ipynb
results/: dissertacao_metrics.md  summary.json
results/runs/20260523_220553_etr_baseline/: config.yaml  metrics.json
results/runs/20260523_222721_schnet_baseline/: config.yaml  metrics.json
results/runs/20260523_230708_mace_extraction/: config.yaml  feature_stats.json  metrics.json
results/runs/20260523_235413_etr_mace_all/: config.yaml  metrics.json
results/runs/20260523_235455_etr_mace_top3_shap/: config.yaml  metrics.json
results/runs/20260523_235547_etr_mace_top5_shap/: config.yaml  metrics.json
results/runs/20260523_235628_etr_mace_pca90/: config.yaml  metrics.json
results/runs/20260523_235714_etr_mace_pca95/: config.yaml  metrics.json
results/runs/20260523_235810_etr_mace_pca99/: config.yaml  metrics.json
results/runs/20260523_235910_etr_mace_rfe/: config.yaml
scripts/: 03_train_baseline.py  04_build_graphs.py  05_train_schnet.py  06_compare.py  07_extract_mace_features.py  08b_feature_reduction_sweep.py  09_extract_mace_embeddings.py  10_finetune_mace.py  11_figures_dissertacao.py
services/api/: Dockerfile  entrypoint.sh  main.py
services/web/: .prettierrc  Dockerfile  eslint.config.js  nginx.conf  package-lock.json  package.json  security-headers.conf
src/: screening.py
tests/: test_etapa2.py
(+75 files in other folders)
