[project]
name = "AETHER"
version = "0.1.0"
description = "AI-Equivariant Tool for Hydrogen Evolution Research"
readme = "README.md"
authors = [
    { name = "Mauricio", email = "mauprb@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "ase>=3.28.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.7",
    "lmdb>=2.2.0",
    "mace-torch>=0.3.16",
    "matplotlib>=3.10.9",
    "mendeleev>=1.1.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pymatgen>=2026.5.4",
    "pytorch-lightning>=2.6.4",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "tensorboard>=2.20.0",
    "torch>=2.12.0",
    "torch-geometric>=2.7.0",
    "torchmetrics>=1.9.0",
    "tqdm>=4.67.3",
    "umap-learn>=0.5.12",
]

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
